# mlebe_RepSep

./: .gitignore  EMIM_abstract.tex  MANIFEST.in  README.md  abstract.tex  abstract_general.tex  article.aux  article.bbl  article.out  article.pytxcode  article.tex  article_general.aux  article_general.out  article_general.pytxcode  article_general.tex  article_ieeetm.tex  article_style.tex  background.tex  bib.bib  cleanup.sh  common_header.tex  compile.sh  compile_article.sh  discussion.tex  evaluation.tex  extra.tex  methods.tex  old_bib.bib  optimization.tex  produce.sh  references.tex  requirements.txt  setup.cfg  supplementary.tex  tox.ini  upload.sh
article/: 1col.conf  2*8plot.conf  4*2.conf  Classifier.tex  background.tex  classifier.tex  discussion.tex  evaluation.tex  extra.tex  header.tex  header_ieeetm.tex  highlights.tex  keywords.tex  main.conf  methods.tex  references.tex  supplementary.tex  temp.conf  template.conf  varplot.conf  wide.conf  workflow.tex
data/: JogB.tsv  functional.csv  functional_dr.csv  functional_significance.csv  functional_t.csv  functional_total.csv  generic.dot  generic_nipype.dot  legacy.dot  metadata.dot  metadata_bad.dot  smoothness.csv  smoothness_data.csv  stats_overview.ipynb  variance.csv  variance_data.csv  variance_data_catplot.csv  volume.csv  volumes.csv
debug/: reg_eval.ipynb  registration_eval.py
lib/: boilerplate.py  categorical.py  utils.py
manual_results_evaluation/: qualitative_reg_ev.ipynb  qualitative_reg_ev_func.ipynb  run_nbconvert.sh  utils.py
prepare/: README.md  classifier_tester.py  collapse.py  (+28 more)
(+103 files in other folders)
