[metadata]
name = mlebe_RepSep
version = 0.0.1-dev
description = Machine Learning Enabled Brain Segmentation for Small Animal Image Registration
author = Hendrik Klug
url = https://github.com/Jimmy2027/mlebe_RepSep
keywords =
    fMRI
    data analysis
    deep learning

license = GNUv3
license_file = LICENSE
